Update some dependencies